--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,36 @@ button, a {
   -webkit-touch-callout: none; /* iOS에서 길게 누를 때 팝업 방지 */
 }
 
+/* 이미지 로딩 최적화 */
+img, picture, video, canvas {
+  display: block;
+  max-width: 100%;
+}
+
+/* Swiper lazy loading 스타일 */
+.swiper-lazy-preloader {
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -21px;
+  margin-top: -21px;
+  z-index: 10;
+  transform-origin: 50%;
+  animation: swiper-preloader-spin 1s infinite linear;
+  box-sizing: border-box;
+  border: 4px solid var(--accent-color);
+  border-radius: 50%;
+  border-top-color: transparent;
+}
+
+@keyframes swiper-preloader-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .material-symbols-outlined {
   font-family: "Material Symbols Outlined";
   font-weight: normal;
